<resources>
    <string name="app_name">AndroidChallenge</string>
    <string name="name">Name</string>
    <string name="subtitle">Subtitle</string>
    <string name="image_new">image_new</string>
    <string name="description">description</string>
    <string name="todo">TODO</string>
    <string name="description_item">Description</string>
    <string name="example_application">Example application</string>
    <string name="countries">Country</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="loading">Loading...</string>
    <string name="country">Portugal</string>
</resources>
