<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:background="@drawable/news_item_layout"
    android:padding="6dip">

    <ImageView
        android:id="@+id/image_new"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="6dip"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_no_image" android:layout_marginEnd="6dip" />

    <TextView
        android:id="@+id/secondLine"
        android:layout_width="fill_parent"
        android:layout_height="26dip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/image_new"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:text="@string/description_item"
        android:textSize="12sp" android:layout_alignParentEnd="true" android:layout_toEndOf="@id/image_new" />

    <TextView
        android:id="@+id/firstLine"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/secondLine"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_alignWithParentIfMissing="true"
        android:layout_toRightOf="@id/image_new"
        android:gravity="center_vertical"
        android:text="@string/example_application"
        android:textSize="16sp" android:layout_alignParentEnd="true" android:layout_toEndOf="@id/image_new"/>

</RelativeLayout>